[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomedicus"
description = "A biomedical and clinical natural language processing engine."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    {name = "University of Minnesota NLP/IE Group", email = "nlp-ie@umn.edu"},
    {name = "Ben Knoll", email = "benknoll@umn.edu"}
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Java',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Topic :: Text Processing :: General',
    'Topic :: Text Processing :: Linguistic'
]
dependencies = [
    "biomedicus_client>=3.5.0",  # We get mtap and tqdm transitively from the client
    "numpy==2.0.2",
    "regex==2024.11.6",
    "torch==2.6.0",
    "requests==2.32.3",
    "watchdog==6.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest==8.3.4"
]
stanza = [
    "stanza==1.10.1",
]

[project.scripts]
b9 = "biomedicus.cli:main"

[project.urls]
homepage = "https://nlpie.github.io/biomedicus"
documentation = "https://nlpie.github.io/biomedicus/guides"
repository = "https://github.com/nlpie/biomedicus3.git"

[tool.setuptools.packages.find]
where = ["python"]
include = ["biomedicus*"]

[tool.setuptools_scm]
write_to = "python/biomedicus/version.py"
fallback_version = "3.5.0"
